--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3><i>COLOR GUESSING GAME</i></h3>
-									<p>This is basically a Color guessing game in format of RGB.It works on three levels i.e. Easy, medim and Hard</p>
+									<p>This is basically a Color guessing game in format of RGB.It works on three levels i.e. Easy, medium and Hard</p>
 									<ul class="actions">
 										<li><a href="https://github.com/roh06" class="button">Visit</a></li>
 									</ul>
