--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<h2>Skills</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic.html" class="button">More about me</a></li>
 									</ul>
 								</div>
 							</div>
