--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 										I'm a pre-final year Undergraduate, currently pursuing a major in Information technology from ABES Engineering College. I love to solve questions related to data structures and Algorithms.
 									</p>
 									<ul class="actions">
-										<li><a href="about.html" class="button">Learn more</a></li>
+										<li><a href="about.html" class="button">More About Me</a></li>
 									</ul>
 								</div>
 							</div>
@@ -76,7 +76,7 @@
 									<h2>Skills</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">More about me</a></li>
+										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</div>
 							</div>
