--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<div class="inner">
 									<h2>Rohan Sachan</h2>
 									<p>
-										I'm a pre-final year Undergraduate, currently pursuing a major in Information technology from ABES Engineering College. I love to solve questions related to data structures and Algorithms.
+										I'm a pre-final year Undergraduate, currently pursuing a major in Information technology from ABES Engineering College. I love to solve problems related to data structures and Algorithms.
 									</p>
 									<ul class="actions">
 										<li><a href="about.html" class="button">More About Me</a></li>
