--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>B.Tech(Computer Science & Engineering)</td>
+                    <td>B.Tech(Information Technology)</td>
                     <td>ABES Engineering College, Ghaziabad</td>
                     <td>Running</td>
                   </tr>
