--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 											</li>
 											<br>
 											<li>
-												<a href="https://leetcode.com/roh_sac/" class="button">Leetcode</a>
+												<a href="https://leetcode.com/roh_sac/" class="button" target="_blank">Leetcode</a>
 											</li>
 										</ul>
 									</p>
