--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 									<h3><i>COLOR GUESSING GAME</i></h3>
 									<p>This is basically a Color guessing game in format of RGB.It works on three levels i.e. Easy, medium and Hard</p>
 									<ul class="actions">
-										<li><a href="https://github.com/roh06/Color-Guessing-Game" class="button">Visit</a></li>
+										<li><a href="https://github.com/roh06/Color-Guessing-Game" class="button"target="_blank">Visit</a></li>
 									</ul>
 								</section>
 								<!-- <section>
@@ -135,7 +135,7 @@
 									<p>It's my portfolio. <br>
 										Made using HTML5,CSS3,JavaScript(JQuery)</p>
 									<ul class="actions">
-										<li><a href="https://roh06.github.io/" class="button">Visit</a></li>
+										<li><a href="https://github.com/roh06/roh06.github.io" class="button" target="_blank">Visit</a></li>
 									</ul>
 								</section>
 								<section>
@@ -143,7 +143,7 @@
 									<h3><i>Weather Bot</i></h3>
 									<p>Build this website which gives us real time weather data. </p>
 									<ul class="actions">
-										<li><a href="https://github.com/roh06/Weather-Bot" class="button">Visit</a></li>
+										<li><a href="https://github.com/roh06/Weather-Bot" class="button" target="_blank">Visit</a></li>
 									</ul>
 								</section>
 							</div>
