--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 						    </p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Want to know More</a></li>
+								<li><a href="https://drive.google.com/file/d/1w3-lq1UBiyboyrygUZ7-hN9GRIa_uLpo/view?usp=sharing"target="_blank" class="button scrolly">View Resume</a></li>
 							</ul>
 						</div>
 					</section>
