--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						    </p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Want to know More</a></li>
-								<li><a href="https://drive.google.com/file/d/1w3-lq1UBiyboyrygUZ7-hN9GRIa_uLpo/view?usp=sharing"target="_blank" class="button scrolly">View Resume</a></li>
+								<li><a href="https://drive.google.com/file/d/1p2EsyopcordVF2y8aUBYRl_ywyMI2tHR/view?usp=sharing"target="_blank" class="button scrolly">View Resume</a></li>
 							</ul>
 						</div>
 					</section>
@@ -148,9 +148,9 @@
 									</ul>
 								</section>
 							</div>
-							<ul class="actions">
+<!-- 							<ul class="actions">
 								<li><a href="about.html" class="button">More about me</a></li>
-							</ul>
+							</ul> -->
 						</div>
 					</section>
 
