--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 				</a>
 				<nav>
 					<ul><li><a href="index.html">My Portfolio</a></li>
-						<li><a href="about.html">About Me</a></li>
+<!-- 						<li><a href="about.html">About Me</a></li> -->
 							
 					</ul>
 				</nav>
