--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<div class="inner">
 							<h1>Welcome</h1>
 							<p>
-						       Hey I m Rohan Sachan and this is my little portfolio.!!
+						       Hey I'm Rohan Sachan and this is my little portfolio.!!
 						    </p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Want to know More</a></li>
